--- a/exercicio/ex022/fundo005.html
+++ b/exercicio/ex022/fundo005.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -13,10 +13,11 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +29,7 @@
     <main>
         <h1>Teste de imagem e fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo eum earum error obcaecati ipsam ipsum illum quasi. Consequatur officia adipisci doloribus! Dicta neque magni illo? Excepturi aliquam veniam esse totam.</p>
     </main>
 </body>
 </html>
