--- a/desafios/d012/d012.html
+++ b/desafios/d012/d012.html
@@ -16,7 +16,7 @@
             por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </h3>
     </header>
-    <section>
+    <section class="normal">
         <p> Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
@@ -25,7 +25,7 @@
             Antes que eu caduque <br> 
             Vou dizer tudo em poesia. <br></p>
     </section>
-    <section id="container">
+    <section class="imagem">
         <p> Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -34,7 +34,7 @@
             Basta botar uma flor <br>
             E um coração desenhado. <br></p>
     </section>
-    <section>
+    <section class="normal">
         <p> Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -50,7 +50,7 @@
             Pra entender como fica <br>
             Decifre esse rabisco. <br></p>
     </section>
-    <section id="container2">
+    <section class="imagem">
         <p> Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -59,7 +59,7 @@
             Era texto de verdade <br>
             Nas linhas do coração. <br></p>
     </section>
-    <section>
+    <section class="normal">
         <p> Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
